core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__error_cases-4.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT MEAN() FROM data\")"
---
rewriting statement
caused by
gather information about select statement
caused by
Error during planning: invalid number of arguments for mean, expected 1, got 0
