core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__explain-6.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"EXPLAIN SHOW TAG KEYS\")"
---
Explain [plan_type:Utf8, plan:Utf8]
  TableScan: tag_keys [iox::measurement:Dictionary(Int32, Utf8), tagKey:Dictionary(Int32, Utf8)]
