core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__explain-7.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"EXPLAIN SHOW FIELD KEYS\")"
---
Explain [plan_type:Utf8, plan:Utf8]
  TableScan: field_keys [iox::measurement:Utf8, fieldKey:Utf8, fieldType:Utf8]
